added dynamic queries
