# rest/route/router.go
@@ -1,6 +1,7 @@
 package route
 
 import (
+	"fmt"
 	auth "github.com/alvin-reyes/estuary-auth"
 	"github.com/application-research/estuary-metrics/core/dao"
 	devicesapi "github.com/application-research/estuary-metrics/rest/api/devices-api"
@@ -14,16 +15,17 @@ import (
 )
 
 // ConfigRouter configure gin route
+// @Security BearerAuth
 func ConfigRouter(router gin.IRoutes) {
 	router.Use(func(c *gin.Context) {
 		// authenticate here
 		authServer := auth.Init().SetDB(dao.DB).Connect()
 		authorizationString := c.GetHeader("Authorization")
 		authParts := strings.Split(authorizationString, " ")
+		fmt.Println("authParts: ", authParts)
 		//	authparts
 		if len(authParts) != 2 {
 			http.Error(c.Writer, "invalid authorization header", http.StatusUnauthorized)
-
 		}
 		// 	tokens
 		token, err := authServer.CheckAuthorizationToken(authParts[1], 100) // user needs to be 100 (super admin to access)
